@@ -2,7 +2,12 @@
 
 use Test::More;
 
-eval "use Test::Pod::Coverage 1.04";
-plan skip_all => "Test::Pod::Coverage 1.04 required for testing POD coverage" if $@;
+BEGIN {
+    unless ($ENV{RELEASE_TESTING}) {
+        plan(skip_all => 'these tests are for release candidate testing');
+    }
+}
 
+use Test::Pod::Coverage 1.04;
 all_pod_coverage_ok();
+
