@@ -2,7 +2,12 @@
 
 use strict;
 use Test::More;
-eval "use Test::Pod 1.18";
-plan skip_all => "Test::Pod 1.18 required for testing POD" if $@;
 
+BEGIN {
+    unless ($ENV{RELEASE_TESTING}) {
+        plan(skip_all => 'these tests are for release candidate testing');
+    }
+}
+
+use Test::Pod 1.18;
 all_pod_files_ok(all_pod_files("."));
