@@ -2,6 +2,8 @@ Revision history for Perl extension Carp::Always.
 
     $Id: Changes 1480 2007-07-30 14:35:04Z me $
 
+        - pod tests no longer run at install time (RT#87423, Karen Etheridge)
+
 0.10  Fri Aug 19 2011
         - fix typo in POD RT#68793 (also reported by Kai Moonbourn)
         - Carp::Always ate part of errors like 'foo at bar' RT#57385
